# QTourney

./: .gitignore  CHANGES  CMakeLists.txt  CMakeLists.txt.user.2.3pre1  CONTRIB  IDEAS  README
cmake/: CMakeLists.txt  SociBackend.cmake  SociConfig.cmake  SociDependencies.cmake  SociUtilities.cmake  SociVersion.cmake
form_pairs/: CMakeLists.txt  application.cpp  application.hpp  main.cpp
gui/: CMakeLists.txt  PairsDelegate.qml  PairsList.qml  ParticipantFunctions.js  ParticipantsDelegate.qml  ParticipantsList.qml  RoundsDelegate.qml  RoundsList.qml  SlidePannel.qml  duels_model_adapter.cpp  duels_model_adapter.hpp  log_file.cpp  log_file.hpp  main.cpp  registration_model.cpp  registration_model.hpp  rounds_model_adapter.cpp  rounds_model_adapter.hpp  tournament.pro  tournament.qml  tournament.qrc
gui/controls/: ImageButton.qml  LabeledText.qml  ScrollBar.qml  SpinButtons.qml  TextButton.qml  ToggleButton.qml
gui/controls/adaptive_search/: AdaptiveSearchPanel.qml
gui/controls/adaptive_sort/: AdaptiveSearch.qml  AdaptiveSearchPanel.qml  search.js
gui/data/: FullList.qml  TestList.qml  list.txt  list_small.txt  rounds.txt
gui/test/: test.qml  test_order.qml
libs/: CMakeLists.txt  _score.hpp  bidirectional_map.hpp  duel.cpp  duel.hpp  participant.cpp  participant.hpp  participant.inc  round.cpp  round.hpp  round.inc  tournament.cpp  tournament.hpp
libs/details/: state.cpp  state.hpp
libs/details/states/: canceled.cpp  canceled.hpp  challenge.cpp  challenge.hpp  factory.cpp  factory.hpp  fighting.cpp  fighting.hpp  forfeit.cpp  forfeit.hpp  tie.cpp  tie.hpp  win.cpp  win.hpp
start_round/: CMakeLists.txt  application.cpp  application.hpp  main.cpp
tests/: list.txt  pairs.txt  participants.xls  run.bat  tie.txt  to_list.bat  win.txt
